Documentation edits made through Mintlify web editor

--- a/guides/linking-any-virtual-number.mdx
+++ b/guides/linking-any-virtual-number.mdx
@@ -9,40 +9,32 @@ This guide will walk you through connecting your SIP provider to Fonoster by set
   <Step title="Request early access">
     To get started, you need to request early access to Fonoster. You can do this by visiting the <a href="https://github.com/orgs/fonoster/discussions/695">GitHub Discussions</a> and following the instructions.
   </Step>
-  <Step title="Set Up Authentication">
-    ### SIP Authentication (If required)
+  <Step title="Set Up Authentication (If required)">
     If your VoIP provider requires SIP authentication, run the following command and follow the interactive prompts:
 
     ```bash
     fonoster sipnet:credentials:create
     ```
 
-    After running this command, please request the necessary credentials from your provider.
+    Before running this command, please request the necessary credentials from your provider.
 
-    ### Static IP Authentication (If required)
     If your provider uses static IP authentication, provide them with the following IP address:
 
     **165.22.7.155**
 
-    This IP is used to verify the origin of the signaling.
+    Your provider will use it to verify the origin of the signaling.
   </Step>
 
   <Step title="Configure Your SIP Trunk">
-    ### Verify Provider Protocol
     Before creating your trunk, verify with your provider the preferred transport protocol (e.g., TCP, UDP, or TLS). Use the same protocol when specifying your _Outbound URI_.
 
-    ### Create a SIP Trunk
-    Run the following command to create your trunk:
+    Then, use the following command to create your trunk:
 
     ```bash
     fonoster sipnet:trunks:create
     ```
 
-    Follow the prompts to complete the configuration. Make sure that your _Inbound URI_ ends with **.sip.fonoster.com**. For example, if your company is **Acme Corp**, you might use:
-
-    ```
-    acme.sip.fonoster.com
-    ```
+    Follow the prompts to complete the configuration. Ensure your _Inbound URI_ ends with **.sip.fonoster.com**. For example, if your company is **Acme Corp**, you might use `acme.sip.fonoster.com`
 
     <Note>
       The _Inbound URI_ must be globally unique. If you receive an error, please try using a different value.
@@ -50,20 +42,17 @@ This guide will walk you through connecting your SIP provider to Fonoster by set
   </Step>
 
   <Step title="Create and Verify Your Virtual Number">
-    ### Creating the Virtual Number
     With your trunk in place, create a virtual number to route incoming SIP traffic. Execute the command below:
 
     ```bash
     fonoster sipnet:numbers:create
     ```
 
-    You will be prompted for the details of your virtual number. **Important:** Ensure that this number exactly matches the value your provider sends in the **FROM** header of the SIP traffic. Any discrepancy may prevent proper traffic matching.
+    You will be prompted for the details of your virtual number. Ensure that this number exactly matches the value your provider sends in the **FROM** header of the SIP traffic. Any discrepancy may prevent proper traffic matching.
 
-    ### Handling Number Conflicts
     If you encounter an error such as "Number already exists," please contact the [Fonoster support team](https://discord.gg/4QWgSz4hTC). They will help resolve any conflicts with existing numbers.
 
-    ### Verify Your Setup
-    To check that your virtual number has been linked successfully, list your numbers with:
+    Finally, to check that your virtual number has been linked successfully, list your numbers with:
 
     ```bash
     fonoster sipnet:numbers:list
