Documentation edits made through Mintlify web editor

--- a/guides/linking-any-virtual-number.mdx
+++ b/guides/linking-any-virtual-number.mdx
@@ -6,8 +6,8 @@ description: 'Connecting any SIP provider with Fonoster.'
 This guide will walk you through connecting your SIP provider to Fonoster by setting up authentication, configuring a SIP trunk, and creating your virtual number. Follow the steps below to link any virtual number to your application.
 
 <Note>
-  If you are linking a Twilio number, consider using the dedicated command 
-  <code>fonoster sipnet:numbers:linkTwilioNumber</code> for a simplified process.
+  For Twilio numbers, consider using the dedicated command 
+  `fonoster sipnet:numbers:linkTwilioNumber` for a simplified process.
 </Note>
 
 <Steps>
