chore: fixing generate:readme hook

--- a/mods/ctl/.intro.md
+++ b/mods/ctl/.intro.md
@@ -1,7 +1,7 @@
 ctl
 =================
 
-[![command-line tool](https://img.shields.io/badge/ctl-oclif-brightgreen.svg)](https://fonoster.com)
+[![Command-line Tool](https://img.shields.io/badge/ctl-oclif-brightgreen.svg)](https://fonoster.com)
 [![Version](https://img.shields.io/npm/v/@fonoster/ctl.svg)](https://npmjs.org/package/@fonoster/voice)
 [![Downloads/week](https://img.shields.io/npm/dw/@fonoster/ctl.svg)](https://npmjs.org/package/@fonoster/voice)
 [![License](https://img.shields.io/npm/l/@fonoster/ctl.svg)](https://github.com/fonoster/fonoster/blob/main/package.json)
